<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Laws">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10sp"
        android:layout_marginStart="10sp"
        android:layout_marginBottom="10sp"
        android:layout_marginEnd="10sp"
        >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:text="Go through the Laws"
                android:textColor="#ffff"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="24sp"
                android:textStyle="bold"
                android:background="@drawable/send_sms_btn">
            </Button>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rape_law_description"
                android:textColor="#ffff"
                android:layout_marginTop="40dp"
                android:textAlignment="center"
                android:textSize="15sp"
                android:background="#6F2B2B">
            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/law2"
                android:textColor="#ffff"
                android:layout_marginTop="40dp"
                android:textAlignment="center"
                android:textSize="15sp"
                android:background="#6F2B2B">
            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/law3"
                android:textColor="#ffff"
                android:layout_marginTop="40dp"
                android:textAlignment="center"
                android:textSize="15sp"
                android:background="#6F2B2B">
            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/law4"
                android:textColor="#ffff"
                android:layout_marginTop="40dp"
                android:textAlignment="center"
                android:textSize="15sp"
                android:background="#6F2B2B">
            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/law5"
                android:textColor="#ffff"
                android:layout_marginTop="40dp"
                android:textAlignment="center"
                android:textSize="15sp"
                android:background="#6F2B2B">
            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/law6"
                android:textColor="#ffff"
                android:layout_marginTop="40dp"
                android:textAlignment="center"
                android:textSize="15sp"
                android:background="#6F2B2B">
            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/law7"
                android:textColor="#ffff"
                android:layout_marginTop="40dp"
                android:textAlignment="center"
                android:textSize="15sp"
                android:background="#6F2B2B">
            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/law8"
                android:textColor="#ffff"
                android:layout_marginTop="40dp"
                android:textAlignment="center"
                android:textSize="15sp"
                android:background="#6F2B2B">
            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/law9"
                android:textColor="#ffff"
                android:layout_marginTop="40dp"
                android:textAlignment="center"
                android:textSize="15sp"
                android:background="#6F2B2B">
            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/law10"
                android:textColor="#ffff"
                android:layout_marginTop="40dp"
                android:textAlignment="center"
                android:textSize="15sp"
                android:background="#6F2B2B">
            </TextView>



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/law11"
                android:textColor="#ffff"
                android:layout_marginTop="40dp"
                android:textAlignment="center"
                android:textSize="15sp"
                android:background="#6F2B2B">
            </TextView>




        </LinearLayout>

    </RelativeLayout>

</ScrollView>